--- a/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
+++ b/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
@@ -55,7 +55,10 @@
     <Compile Include="DataContexts\ProjectoBaseDataContext.cs" />
     <Compile Include="Maps\UsuarioMap.cs" />
     <Compile Include="Maps\UsuarioPerfilMap.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seeds\UsuarioPerfilSeed.cs" />
+    <Compile Include="Seeds\UsuarioSeed.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
