--- a/src/ProjectoAlexa.Web/packages.config
+++ b/src/ProjectoAlexa.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.5.3" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="Font.Awesome" version="5.15.0" targetFramework="net472" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.2" targetFramework="net472" />
