--- a/src/ProjectoAlexa.Web/ProjectoAlexa.Web.csproj
+++ b/src/ProjectoAlexa.Web/ProjectoAlexa.Web.csproj
@@ -129,17 +129,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="AutoMapper\AutoMapperConfig.cs" />
-    <Compile Include="AutoMapper\AutoMapperProfile.cs" />
+    <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="Controllers\ContaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\CriptoHelper.cs" />
-    <Compile Include="Models\UsuarioModel.cs" />
-    <Compile Include="Models\UsuarioPerfilModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\RegistarViewModel.cs" />
@@ -342,6 +338,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -354,12 +351,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjectoAlexa.Data\ProjectoAlexa.Data.csproj">
-      <Project>{9A923B6D-4DA0-4FBC-ACE9-0252EC2B67B4}</Project>
+      <Project>{9a923b6d-4da0-4fbc-ace9-0252ec2b67b4}</Project>
       <Name>ProjectoAlexa.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProjectoAlexa.Domain\ProjectoAlexa.Domain.csproj">
-      <Project>{F1B04F34-06E4-4338-989E-E5AF993290F4}</Project>
-      <Name>ProjectoAlexa.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
