--- a/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
+++ b/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
@@ -53,14 +53,29 @@
   <ItemGroup>
     <Compile Include="DataContexts\DbInitializer.cs" />
     <Compile Include="DataContexts\ProjectoBaseDataContext.cs" />
+    <Compile Include="Entities\AreaCandidatura.cs" />
+    <Compile Include="Entities\Candidatura.cs" />
+    <Compile Include="Entities\Documento.cs" />
     <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\Municipio.cs" />
+    <Compile Include="Entities\Exame.cs" />
+    <Compile Include="Entities\Pergunta.cs" />
     <Compile Include="Entities\Provincia.cs" />
+    <Compile Include="Entities\Resposta.cs" />
     <Compile Include="Entities\Usuario.cs" />
     <Compile Include="Entities\UsuarioPerfil.cs" />
     <Compile Include="Helpers\CriptoHelper.cs" />
+    <Compile Include="Maps\AreaCandidaturaMap.cs" />
+    <Compile Include="Maps\CandidaturaMap.cs" />
+    <Compile Include="Maps\DocumentoMap.cs" />
+    <Compile Include="Maps\PerguntaMap.cs" />
+    <Compile Include="Maps\ProvinciaMap.cs" />
+    <Compile Include="Maps\RespostaMap.cs" />
     <Compile Include="Maps\UsuarioMap.cs" />
     <Compile Include="Maps\UsuarioPerfilMap.cs" />
+    <Compile Include="Migrations\202010301611000_AddOrUpdateTables.cs" />
+    <Compile Include="Migrations\202010301611000_AddOrUpdateTables.designer.cs">
+      <DependentUpon>202010301611000_AddOrUpdateTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seeds\UsuarioPerfilSeed.cs" />
@@ -69,6 +84,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202010301611000_AddOrUpdateTables.resx">
+      <DependentUpon>202010301611000_AddOrUpdateTables.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
