--- a/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
+++ b/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
@@ -55,7 +55,6 @@
     <Compile Include="DataContexts\ProjectoBaseDataContext.cs" />
     <Compile Include="Entities\AreaCandidatura.cs" />
     <Compile Include="Entities\Candidatura.cs" />
-    <Compile Include="Entities\Documento.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Exame.cs" />
     <Compile Include="Entities\Pergunta.cs" />
@@ -67,9 +66,9 @@
     <Compile Include="Helpers\CriptoHelper.cs" />
     <Compile Include="Maps\AreaCandidaturaMap.cs" />
     <Compile Include="Maps\CandidaturaMap.cs" />
-    <Compile Include="Maps\DocumentoMap.cs" />
     <Compile Include="Maps\PerguntaMap.cs" />
     <Compile Include="Maps\ProvinciaMap.cs" />
+    <Compile Include="Maps\QuestionarioMap.cs" />
     <Compile Include="Maps\RespostaMap.cs" />
     <Compile Include="Maps\UsuarioMap.cs" />
     <Compile Include="Maps\UsuarioPerfilMap.cs" />
@@ -77,10 +76,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\AreaCandidaturaRepositorio.cs" />
     <Compile Include="Repositorios\CandidaturaRepositorio.cs" />
+    <Compile Include="Repositorios\ProvinciaRepositorio.cs" />
     <Compile Include="Repositorios\Questionarios\PerguntaRepositorio.cs" />
+    <Compile Include="Repositorios\Questionarios\QuestionarioRepositorio.cs" />
     <Compile Include="Repositorios\Questionarios\RespostaRepositorio.cs" />
     <Compile Include="Repositorios\UsuarioPerfilRepositorio.cs" />
     <Compile Include="Repositorios\UsuarioRepositorio.cs" />
+    <Compile Include="Seeds\AreaSeed.cs" />
     <Compile Include="Seeds\ProvinciaSeed.cs" />
     <Compile Include="Seeds\UsuarioPerfilSeed.cs" />
     <Compile Include="Seeds\UsuarioSeed.cs" />
