--- a/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
+++ b/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="DataContexts\ProjectoBaseDataContext.cs" />
     <Compile Include="Entities\AreaCandidatura.cs" />
     <Compile Include="Entities\Candidatura.cs" />
+    <Compile Include="Entities\Concurso.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Exame.cs" />
     <Compile Include="Entities\Pergunta.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Helpers\CriptoHelper.cs" />
     <Compile Include="Maps\AreaCandidaturaMap.cs" />
     <Compile Include="Maps\CandidaturaMap.cs" />
+    <Compile Include="Maps\ExameMap.cs" />
     <Compile Include="Maps\PerguntaMap.cs" />
     <Compile Include="Maps\ProvinciaMap.cs" />
     <Compile Include="Maps\QuestionarioMap.cs" />
