--- a/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
+++ b/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Entities\Candidatura.cs" />
     <Compile Include="Entities\Concurso.cs" />
     <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\Enum\EnumEstadoExame.cs" />
     <Compile Include="Entities\Enum\EnumTempoExame.cs" />
     <Compile Include="Entities\Exame.cs" />
     <Compile Include="Entities\Pergunta.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="Repositorios\Questionarios\PerguntaRepositorio.cs" />
     <Compile Include="Repositorios\Questionarios\QuestionarioRepositorio.cs" />
     <Compile Include="Repositorios\Questionarios\RespostaRepositorio.cs" />
+    <Compile Include="Repositorios\Questionarios\TempoExameRepositorio.cs" />
     <Compile Include="Repositorios\UsuarioPerfilRepositorio.cs" />
     <Compile Include="Repositorios\UsuarioRepositorio.cs" />
     <Compile Include="Seeds\AreaSeed.cs" />
