update 28/03/2021 - 03:20 - Revisão em views e update no Layout admin

--- a/src/ProjectoAlexa.Web/ProjectoAlexa.Web.csproj
+++ b/src/ProjectoAlexa.Web/ProjectoAlexa.Web.csproj
@@ -1432,6 +1432,7 @@
     <Content Include="Views\Exame\FazerExame.cshtml" />
     <Content Include="Views\ConcursoAdmin\Index.cshtml" />
     <Content Include="Views\ConcursoAdmin\Create.cshtml" />
+    <Content Include="Views\Admin\VisaoGeral.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
