update - 14/04/2021 - criação do ExameRepositorio

--- a/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
+++ b/src/ProjectoAlexa.Data/ProjectoAlexa.Data.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Repositorios\AreaCandidaturaRepositorio.cs" />
     <Compile Include="Repositorios\CandidaturaRepositorio.cs" />
     <Compile Include="Repositorios\ConcursoRepositorio.cs" />
+    <Compile Include="Repositorios\ExameRepositorio.cs" />
     <Compile Include="Repositorios\ProvinciaRepositorio.cs" />
     <Compile Include="Repositorios\Questionarios\PerguntaRepositorio.cs" />
     <Compile Include="Repositorios\Questionarios\QuestionarioRepositorio.cs" />
