--- a/src/ProjectoAlexa.Web/ProjectoAlexa.Web.csproj
+++ b/src/ProjectoAlexa.Web/ProjectoAlexa.Web.csproj
@@ -161,6 +161,7 @@
     <Compile Include="ViewModels\AreaCandidaturaViewModel.cs" />
     <Compile Include="ViewModels\CandidaturaViewModel.cs" />
     <Compile Include="ViewModels\ConcursoViewModel.cs" />
+    <Compile Include="ViewModels\ExameViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\PerguntaViewModel.cs" />
     <Compile Include="ViewModels\QuestionarioViewModel.cs" />
@@ -177,6 +178,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\brands.css" />
     <Content Include="Content\brands.min.css" />
+    <Content Include="Content\Estilos do projecto\cronometro.css" />
     <Content Include="Content\fontawesome-all.css" />
     <Content Include="Content\fontawesome-all.min.css" />
     <Content Include="Content\fontawesome.css" />
@@ -381,6 +383,7 @@
     <Content Include="Scripts\ScriptsDoProjecto\classes\Pergunta.js" />
     <Content Include="Scripts\ScriptsDoProjecto\classes\Questionario.js" />
     <Content Include="Scripts\ScriptsDoProjecto\classes\Resposta.js" />
+    <Content Include="Scripts\ScriptsDoProjecto\cronometro.js" />
     <Content Include="Scripts\ScriptsDoProjecto\Exame.js" />
     <Content Include="Scripts\ScriptsDoProjecto\questionario-add.js" />
     <Content Include="Scripts\src\index.js" />
