--- a/src/ProjectoAlexa.Web/ProjectoAlexa.Web.csproj
+++ b/src/ProjectoAlexa.Web/ProjectoAlexa.Web.csproj
@@ -383,6 +383,7 @@
     <Content Include="Scripts\ScriptsDoProjecto\classes\Pergunta.js" />
     <Content Include="Scripts\ScriptsDoProjecto\classes\Questionario.js" />
     <Content Include="Scripts\ScriptsDoProjecto\classes\Resposta.js" />
+    <Content Include="Scripts\ScriptsDoProjecto\cronometro-reverso.js" />
     <Content Include="Scripts\ScriptsDoProjecto\cronometro.js" />
     <Content Include="Scripts\ScriptsDoProjecto\Exame.js" />
     <Content Include="Scripts\ScriptsDoProjecto\questionario-add.js" />
